--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # Dependency directories
-node_modules/
+/node_modules/
+/packages/*/node_modules/
 
 # TypeScript v1 declaration files
 typings/
@@ -19,3 +19,6 @@ typings/
 
 # dotenv environment variables file
 .env
+
+.expo
+/packages/web/build
