--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "2.1.1"
   },
   "dependencies": {
+    "gh-pages": "2.0.1",
     "react": "16.6.0",
     "react-dom": "16.6.0"
   },
@@ -13,11 +14,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://zimekk.github.io/stack",
   "browserslist": [
     ">0.2%",
     "not dead",
