--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,7 +2,13 @@
   "name": "@stack/api",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@stack/web": "1.0.0",
+    "chokidar": "2.0.4",
+    "express": "4.16.4",
+    "express-graphql": "0.7.1",
+    "graphql": "14.0.2"
+  },
   "babel": {
     "presets": [
       "@babel/preset-env"
@@ -13,9 +19,6 @@
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
-    "@babel/node": "7.0.0",
-    "express": "4.16.4",
-    "express-graphql": "0.7.1",
-    "graphql": "14.0.2"
+    "@babel/node": "7.0.0"
   }
 }
