--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "gh-pages": "2.0.1",
+    "graphql-request": "1.8.2",
     "react": "16.6.0",
     "react-dom": "16.6.0"
   },
@@ -22,6 +23,7 @@
     "extends": "react-app"
   },
   "homepage": "https://zimekk.github.io/stack",
+  "proxy": "http://localhost:4000/api/",
   "browserslist": [
     ">0.2%",
     "not dead",
