--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "start:web": "cd packages/web && yarn start",
     "precommit": "lint-staged",
     "lint": "lint-staged",
-    "test": "cd packages/web && yarn test",
+    "test": "yarn test:api && yarn test:web",
+    "test:api": "cd packages/api && yarn test",
+    "test:web": "cd packages/web && yarn test",
     "deploy": "cd packages/web && yarn deploy",
     "clean": "rm -rf node_modules/ packages/*/node_modules/",
     "update": "yarn upgrade-interactive --latest"
