--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,11 +14,24 @@
       "@babel/preset-env"
     ]
   },
+  "jest": {
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "coverageReporters": [
+      "lcov",
+      "html"
+    ]
+  },
   "scripts": {
-    "start": "babel-node index.js"
+    "start": "babel-node index.js",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
-    "@babel/node": "7.0.0"
+    "@babel/node": "7.0.0",
+    "jest": "23.6.0",
+    "jest-cli": "23.6.0"
   }
 }
