--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,6 +28,11 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "babel": {
+    "plugins": [
+      "macros"
+    ]
+  },
   "homepage": "https://zimekk.github.io/stack",
   "proxy": "http://localhost:4000/api/",
   "browserslist": [
