--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
   "name": "stack",
   "version": "1.0.0",
   "main": "index.js",
@@ -14,11 +13,15 @@
     "concurrently": "4.0.1",
     "eslint": "5.8.0",
     "eslint-config-prettier": "3.1.0",
+    "eslint-config-react-app": "3.0.5",
     "eslint-plugin-flowtype": "3.2.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
     "flow-bin": "0.85.0",
     "husky": "1.1.3",
+    "lerna": "^3.4.3",
     "lint-staged": "8.0.4",
     "prettier": "1.14.3",
     "prettier-eslint": "8.8.2"
@@ -40,28 +43,32 @@
     }
   },
   "lint-staged": {
-    "*.{js}": [
-      "prettier --write",
-      "eslint --fix",
-      "git add"
-    ],
-    "*.{json,css,md}": [
-      "prettier --write",
-      "git add"
-    ]
+    "globOptions": {
+      "matchBase": false
+    },
+    "linters": {
+      "*.{js}": [
+        "prettier --write",
+        "eslint --fix",
+        "git add"
+      ],
+      "*.{json,css,md}": [
+        "prettier --write",
+        "git add"
+      ]
+    }
   },
   "scripts": {
+    "bootstrap": "lerna bootstrap --hoist",
     "start": "concurrently --kill-others-on-fail \"yarn start:api\" \"yarn start:web\"",
-    "start:api": "cd packages/api && yarn start",
-    "start:app": "cd packages/app && yarn start",
-    "start:web": "cd packages/web && yarn start",
+    "start:api": "lerna run --scope @stack/api start --stream",
+    "start:app": "lerna run --scope @stack/app start --stream",
+    "start:web": "lerna run --scope @stack/web start --stream",
     "precommit": "lint-staged",
-    "lint": "lint-staged",
-    "test": "CI=true yarn test:api && yarn test:web",
-    "test:api": "cd packages/api && yarn test",
-    "test:web": "cd packages/web && yarn test",
-    "deploy": "cd packages/web && yarn deploy",
-    "clean": "rm -rf node_modules/ packages/*/node_modules/",
+    "lint": "eslint packages",
+    "test": "CI=true lerna run --ignore @stack/app test",
+    "deploy": "lerna run --scope @stack/web deploy --stream",
+    "clean": "lerna clean",
     "update": "yarn upgrade-interactive --latest"
   }
 }
