--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,22 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@stack/sql": "1.0.0",
+    "@stack/env": "1.0.0",
     "@stack/web": "1.0.0",
+    "@stack/sql": "1.0.0",
     "chokidar": "2.0.4",
     "express": "4.16.4",
     "express-graphql": "0.7.1",
     "graphql": "14.0.2"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "testPathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "coverageReporters": [
-      "lcov",
-      "html"
-    ]
   },
   "scripts": {
     "start": "node -r @stack/env index.js",
@@ -26,8 +17,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
-    "@babel/node": "7.0.0",
-    "jest": "23.6.0",
-    "jest-cli": "23.6.0"
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0"
   }
 }
