--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
       "matchBase": false
     },
     "linters": {
-      "*.{js}": [
+      "**/*.js": [
         "prettier --write",
         "eslint --fix",
         "git add"
       ],
-      "*.{json,css,md}": [
+      "**/*.{json,css,md}": [
         "prettier --write",
         "git add"
       ]
