update app and deps

--- a/packages/app/app.json
+++ b/packages/app/app.json
@@ -1,12 +1,26 @@
 {
   "expo": {
-    "name": "Stack App",
-    "slug": "stack-app",
-    "sdkVersion": "27.0.0",
     "ignoreNodeModulesValidation": true,
-    "packagerOpts": {
-      "config": "rn-cli.config.js",
-      "projectRoots": ""
+    "name": "Stack App",
+    "description": "A very interesting project.",
+    "slug": "stack-app",
+    "privacy": "public",
+    "sdkVersion": "31.0.0",
+    "platforms": ["ios", "android"],
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": ["**/*"],
+    "ios": {
+      "supportsTablet": true
     }
   }
 }
