--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "husky": "1.1.3",
     "lerna": "^3.4.3",
     "lint-staged": "8.0.4",
-    "prettier": "1.14.3",
+    "prettier": "1.15.1",
     "prettier-eslint": "8.8.2"
   },
   "prettier": {},
@@ -66,7 +66,7 @@
     "start:web": "lerna run --scope @stack/web start --stream",
     "precommit": "lint-staged",
     "lint": "eslint packages",
-    "test": "CI=true lerna run --ignore @stack/app test",
+    "test": "CI=true lerna run test",
     "deploy": "lerna run --scope @stack/web deploy --stream",
     "clean": "lerna clean",
     "update": "yarn upgrade-interactive --latest"
