--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
     "flow-bin": "0.85.0",
+    "graphql": "14.0.2",
+    "graphql-request": "1.8.2",
+    "graphql-tag": "2.10.0",
+    "graphql-tag.macro": "2.0.0",
+    "graphql-tools": "4.0.3",
     "husky": "1.1.3",
     "lerna": "^3.4.3",
     "lint-staged": "8.0.4",
