--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
   "repository": "https://github.com/zimekk/stack",
   "license": "MIT",
   "devDependencies": {
+    "@babel/polyfill": "7.2.5",
     "babel-eslint": "10.0.1",
     "concurrently": "4.1.0",
-    "eslint": "5.9.0",
-    "eslint-config-prettier": "3.3.0",
-    "eslint-config-react-app": "3.0.5",
-    "eslint-plugin-flowtype": "3.2.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-prettier": "3.0.0",
-    "eslint-plugin-react": "7.11.1",
+    "eslint": "5.13.0",
+    "eslint-config-prettier": "4.0.0",
+    "eslint-config-react-app": "3.0.6",
+    "eslint-plugin-flowtype": "3.2.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "7.12.4",
     "flow-bin": "0.86.0",
-    "graphql": "14.0.2",
+    "graphql": "14.1.1",
     "graphql-request": "1.8.2",
-    "graphql-tag": "2.10.0",
-    "graphql-tag.macro": "2.0.0",
-    "graphql-tools": "4.0.3",
-    "husky": "1.2.0",
-    "lerna": "^3.4.3",
-    "lint-staged": "8.1.0",
-    "prettier": "1.15.2",
+    "graphql-tag": "2.10.1",
+    "graphql-tag.macro": "2.1.0",
+    "graphql-tools": "4.0.4",
+    "husky": "1.3.1",
+    "identity-obj-proxy": "3.0.0",
+    "lerna": "^3.10.8",
+    "lint-staged": "8.1.2",
+    "prettier": "1.16.3",
     "prettier-eslint": "8.8.2"
   },
   "prettier": {},
